# jalali_shamsi_datepicker

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
jalali_shamsi_datepicker/: hooks.py  modules.txt  patches.txt
jalali_shamsi_datepicker/fixtures/: custom_field.json
jalali_shamsi_datepicker/patches/: add_yyyy_mm_dd_date_format.py
jalali_shamsi_datepicker/public/css/: custom.css
jalali_shamsi_datepicker/public/js/: base.js  in_words_cleanup.js  togregorian_date.js  topersian_date.js
